--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project("data-structures")
 
 set(CMAKE_CXX_STANDARD "20")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -Og")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Debug)
