refactor: remove vector and refactor project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,19 @@
-cmake_minimum_required(VERSION "3.29")
-project("data-structures")
+cmake_minimum_required(VERSION 3.11)
+project(data_structures)
 
-set(CMAKE_CXX_STANDARD "20")
-set(CMAKE_CXX_FLAGS_DEBUG "-g -Og")
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Debug)
-endif()
-
-find_package(Catch2 3 REQUIRED)
-
-file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "src/*.hpp" "src/*.cpp")
-
-add_executable(tests ${SOURCE_FILES})
-target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
+set(sources src/linked_list.cpp)
 
 if(MSVC)
-  target_compile_options(tests PRIVATE /W4 /WX)
+  add_compile_options(/W4 /WX)
 else()
-  target_compile_options(tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
+  add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 endif()
+
+add_library(data_structures ${sources})
+target_include_directories(data_structures PUBLIC src)
+
+include(CTest)
+add_subdirectory(tests)
