--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ foreach(test_source ${test_sources})
     set(test_exec ${test_name})
 
     add_executable(${test_exec} ${test_source})
-    target_link_libraries(${test_exec} PRIVATE data_structures)
+    target_link_libraries(${test_exec} PRIVATE structz)
     target_link_libraries(${test_exec} PRIVATE Catch2::Catch2WithMain)
 
     add_test(NAME ${test_name} COMMAND ${test_exec})
