feat(hash_map): implement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,9 @@ set(CMAKE_CXX_STANDARD_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_library(structz
-    src/linked_list.cpp
     src/doubly_linked_list.cpp
+    src/hash_map.cpp
+    src/linked_list.cpp
     src/stack.cpp)
 target_include_directories(structz PUBLIC  
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
