--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 find_package(Catch2 3 REQUIRED)
 
 set(TEST_SOURCES
+    test_binary_heap.cpp
     test_linked_list.cpp
     test_hash_map.cpp
     test_doubly_linked_list.cpp
