feat(red_black_tree): implement basic functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(structz
     src/hash_set.cpp
     src/linked_list.cpp
     src/queue.cpp
+    src/red_black_tree.cpp
     src/stack.cpp
     src/vec.cpp)
 target_include_directories(structz PUBLIC  
