--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(Catch2 3 REQUIRED)
 set(TEST_SOURCES
     test_avl_tree.cpp
     test_binary_heap.cpp
+    test_bs_tree.cpp
     test_circular_list.cpp
     test_linked_list.cpp
     test_hash_map.cpp
